Fix: Focus border on primary tabs is clipped at times.

--- a/styles/base/_backdrop-overrides.scss
+++ b/styles/base/_backdrop-overrides.scss
@@ -42,6 +42,7 @@ ul.primary {
 
 .tabs__tab {
   list-style-type: none;
+  padding: 4px;
 }
 
 .container-fluid {
